--- a/proyecto_too/proyecto_too/Views/Sesion/sesion.cshtml
+++ b/proyecto_too/proyecto_too/Views/Sesion/sesion.cshtml
@@ -1,26 +1,29 @@
 ﻿@{
     ViewData["Title"] = "Sesion";
 }
-<div class="text-center">
-    <main class="form-signin">
-        <form>
-            <img src="@Url.Content("~/imagenes/user.png")"/>
-            <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
-            <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
-            </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
-            </div>
+<div class="text-center col align-self-center" style="padding: 0px 150px 0px 150px;" >
+    <div class="container" style="width:50%; margin:10% auto 5% ">
+        <main class="form-signin" >
+            <form>
+                <img src="@Url.Content("~/imagenes/user.png")" width="60" height="60" />
+                <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
+                <div class="form-floating" style="margin:auto auto 5%">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Correo</label>
+                </div>
+                <div class="form-floating" style="margin: auto auto 5%">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Contraseña</label>
+                </div>
 
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                </label>
-            </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+                <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" value="remember-me"> Recordar contraseña
+                    </label>
+                </div>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
 
-        </form></main>
+            </form>
+        </main>
+    </div>
 </div>
