--- a/proyecto_too/proyecto_too/Views/Sesion/sesion.cshtml
+++ b/proyecto_too/proyecto_too/Views/Sesion/sesion.cshtml
@@ -7,14 +7,13 @@
             <img src="@Url.Content("~/imagenes/user.png")"/>
             <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
             <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" width="">
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
             </div>
-
             <div class="checkbox mb-3">
                 <label>
                     <input type="checkbox" value="remember-me"> Remember me
