--- a/proyecto_too/proyecto_too/Views/Shared/_Layout.cshtml
+++ b/proyecto_too/proyecto_too/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Sesion" asp-action="Sesion">Sing in</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Registro" asp-action="Registro">Registro</a>
+                        </li>
                     </ul>
                 </div>
             </div>
