--- a/proyecto_too/proyecto_too/Views/Sesion/sesion.cshtml
+++ b/proyecto_too/proyecto_too/Views/Sesion/sesion.cshtml
@@ -1,29 +1,34 @@
-﻿@{
+﻿@model Usuario2
+@{
     ViewData["Title"] = "Sesion";
 }
-<div class="text-center col align-self-center" style="padding: 0px 150px 0px 150px;" >
+<script type="text/javascript" src="~/Metodos Script/mettodos.js"></script>
+<div class="text-center col align-self-center" style="padding: 0px 150px 0px 150px;">
     <div class="container" style="width:50%; margin:10% auto 5% ">
-        <main class="form-signin" >
-            <form>
+        <main class="form-signin">
+            <form asp-controller="Sesion" asp-action="Sesion" method="post">
                 <img src="@Url.Content("~/imagenes/user.png")" width="60" height="60" />
                 <h1 class="h3 mb-3 fw-normal">Inicio de sesion</h1>
                 <div class="form-floating" style="margin:auto auto 5%">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <input type="email" asp-for="Email" class="form-control" id="floatingInput" placeholder="name@example.com">
                     <label for="floatingInput">Correo</label>
                 </div>
-                <div class="form-floating" style="margin: auto auto 5%">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <div class="form-floating input-group" style="margin: auto auto 5%">
+                    <input type="password" asp-for="Pasword" class="form-control" id="floatingPassword" placeholder="Password" aria-describedby="mostrar">
                     <label for="floatingPassword">Contraseña</label>
+                    <button id="mostrar" class="btn btn-primary " type="button" onclick="mostrarContrasena()" style="height:58px; width:50px">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                            <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
+                            <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
+                        </svg>
+                    </button>
                 </div>
-
-                <div class="checkbox mb-3">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Recordar contraseña
-                    </label>
-                </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-
+                <button class="w-100 btn btn-lg btn-primary" type="submit" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Iniciar Sesion</button>
             </form>
+
+            <p>¿Desea <a asp-area="" asp-controller="Registro" asp-action="Registro">Registrarse</a> ?</p>
         </main>
     </div>
 </div>
+
+
