--- a/proyecto_too/proyecto_too/Views/Modal/Error.cshtml
+++ b/proyecto_too/proyecto_too/Views/Modal/Error.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+﻿<div class="modal fade" id="ejemplo" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -15,3 +15,10 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    function abrirmodal() {
+        $('#ejemplo').modal('show');
+
+    }
+</script>
