--- a/proyecto_too/proyecto_too/Views/Shared/_Layout.cshtml
+++ b/proyecto_too/proyecto_too/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - proyecto_too - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container text-center" >
+            <p>  &copy; 2021 - Proyecto Tecnologia Orientada a Objeto</p>
         </div>
     </footer>
     <link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
